--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                 have fun playing it.
               </p>
               <a
-                href="https://khushibhambri.github.io/Piano-keyboard/"
+                href="https://khushibhambri.github.io/basic-webdev/Piano/index.html"
                 class="btnn one"
                 >PLAY
               </a>
