--- a/index.html
+++ b/index.html
@@ -445,10 +445,10 @@
     >
       <div class="container-fluid" style="background-color: #b0b8b4ff">
         <!-- Grid row-->
-        <div class="row py-4 d-flex align-items-center">
+        <div class="row py-2 d-flex align-items-center">
           <!-- Grid column 2-->
-          <div class="col-md-6 col-lg-7 text-center">
-            <h6 class="mb-3" style="color: white">
+          <div class="text-center">
+            <h6 class="" style="color: white">
               Get connected with social networks!
             </h6>
 
@@ -522,7 +522,7 @@
               style="width: 60px"
             />
             <p><i class="fa fa-home mr-3"></i>Khanna, Punjab, India</p>
-            <p><i class="fa fa-envelope mr-3"></i>khushi44@gmail.com</p>
+            <p><i class="fa fa-envelope mr-3"></i>Bhambrikhushi4@gmail.com</p>
             <p><i class="fa fa-phone mr-3"></i>+91 9293949512</p>
             <p><i class="fa fa-print mr-3"></i> + 01 234 567 89</p>
           </div>
