--- a/thanks.html
+++ b/thanks.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="mx-auto">
-    <img src="succeed.png" class="profile mt-5">
+    <img src="images/succeed.png" class="profile mt-5">
     <button class="btnn mx-auto"><a href="https://khushi-2002.github.io/Khushi.github.io/">Home page</a></button>
 </div>
 </body>
