--- a/index.html
+++ b/index.html
@@ -175,11 +175,11 @@
           </div>
         </div>
 
-        <!-- <div class="col-lg-4 col-md-6 col-12">
+        <div class="col-lg-4 col-md-6 col-12">
           <div class="card m-4">
             <div class="card-header">
               <!-- <i class="fa fa-connectdevelop"></i>   -->
-        <!-- <i class="fab fa-python"></i>
+        <i class="fab fa-python"></i>
               Python
             </div>
             <img src="Images/ml.png" class="card-img-top" alt="..." />
@@ -191,8 +191,8 @@
               </p>
             </div>
           </div>
-        </div> -->
-        -->
+        </div>
+       
 
         <div class="col-lg-4 col-md-6 col-12">
           <div class="card m-4">
@@ -362,28 +362,6 @@
           </div>
         </div>
 
-        <div class="col-lg-4 col-12 col-md-6">
-          <div class="card m-3 mx-5">
-            <div class="card-header">
-              <i class="fa fa-list-alt"></i>
-              JS Project
-            </div>
-            <img src="Images/piano.jpg" class="card-img-top" alt="..." />
-            <div class="card-body">
-              <h5 class="card-title">Piano App</h5>
-              <p class="card-text">
-                A JS Application that will let u experience a virual piano board
-                on web .You can learn notes by practicing on this app and will
-                have fun playing it.
-              </p>
-              <a
-                href="https://khushibhambri.github.io/basic-webdev/Piano/index.html"
-                class="btnn one"
-                >PLAY
-              </a>
-            </div>
-          </div>
-        </div>
       </div>
     </div>
 
