--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
               Html,CSS,JS
             </div>
             <img
-              src="Images/webdev.png"
+              src="Images/mern.png"
               class="card-img-top"
               alt="..."
               height="270px"
@@ -179,7 +179,7 @@
           <div class="card m-4">
             <div class="card-header">
               <!-- <i class="fa fa-connectdevelop"></i>   -->
-        <i class="fab fa-python"></i>
+              <i class="fab fa-python"></i>
               Python
             </div>
             <img src="Images/ml.png" class="card-img-top" alt="..." />
@@ -192,7 +192,6 @@
             </div>
           </div>
         </div>
-       
 
         <div class="col-lg-4 col-md-6 col-12">
           <div class="card m-4">
@@ -245,21 +244,25 @@
             <div class="card-header">
               <!-- <i class="fa fa-angellist"></i>  -->
               <i class="fas fa-hand-scissors"></i>
-              C++ project
+              C++ projects
             </div>
-            <img src="Images/sudoku.png" class="card-img-top" alt="..." />
+            <img src="Images/c++pro.jpg" class="card-img-top" alt="..." />
             <div class="card-body">
-              <h5 class="card-title">Sudoku Project</h5>
+              <h5 class="card-title">OOP and DSA projects Using C++.</h5>
               <p class="card-text">
-                A C++ game that generates a random Sudoku grid having features
-                of time, score and difficulty level and has a solver that
-                generates the solution too.
+                Various projects in C++ using Object Oriented concepts and DSA.
+                Sudoku solver - A game that generates a random Sudoku grid
+                having features of time, score and diﬃculty level and has a
+                solver that generates the solution too. Flight Reservation
+                System - System that reserves the required seats on a given
+                scheduled ﬂight with required speciﬁcations such as window and
+                class preference and a Notation converter.
               </p>
               <a
-                href="https://github.com/KhushiBhambri/SUDOKU"
+                href="https://kb-projects.netlify.app/#cpp"
                 class="btnn one p-4"
               >
-                CODE
+                VIEW
               </a>
             </div>
           </div>
@@ -269,99 +272,58 @@
           <div class="card m-3 mx-5">
             <div class="card-header">
               <i class="fa fa-paw"></i>
-              C++ Project
+              Web Dev Projects
+            </div>
+            <img src="Images/webdev.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">
+                Front-end Development Using JS and ReactJS
+              </h5>
+              <p class="card-text">
+                Various web Projects using APIs, JS,HTML,CSS and Bootstrap which
+                include a Quiz App that generates 10 random questions of given
+                difficulty and topic via API calls and generates the score, a
+                Piano Sound Borad for Kids, GitHub profile cards with recent
+                repositories of the user, Daily Tips, a Scientific Calculator
+                and many more.
+              </p>
+              <a
+                href="https://kb-projects.netlify.app/#web"
+                class="btnn one p-4"
+              >
+                VIEW
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-12 col-md-6">
+          <div class="card m-3 mx-5">
+            <div class="card-header">
+              <!-- <i class="fa fa-angellist"></i>  -->
+              <i class="fa fa-list-alt"></i>
+              Data Analysis Projects
             </div>
             <img
-              src="Images/Airline-Reservation-System.png"
+              src="Images/dataanalytics.png"
               class="card-img-top"
               alt="..."
             />
             <div class="card-body">
-              <h5 class="card-title">Flight Reservation System</h5>
+              <h5 class="card-title">Data Analysis Using Python</h5>
               <p class="card-text">
-                C++ based flight reservation system that reserves the required
-                seats on a given scheduled flight with required specifications
-                such as widow and class preference.
+                Data Analytics projects built using python and its libraries
+                like matplotlib,pandas,numpy,seaborn,plotly and deployed via
+                streamlit. Projects include whatsApp Chat Analyser and Twitter
+                sentimental analysis. Natural language processing used for
+                sentimental analysis.
               </p>
-              <a
-                href="https://github.com/KhushiBhambri/Flight-Reservation-System"
-                class="btnn one p-4"
-              >
-                CODE
+              <a href="https://kb-projects.netlify.app/#da" class="btnn one"
+                >VIEW
               </a>
             </div>
           </div>
         </div>
-
-        <div class="col-lg-4 col-12 col-md-6">
-          <div class="card m-3 mx-5">
-            <div class="card-header">
-              <!-- <i class="fa fa-angellist"></i>  -->
-              <i class="fa fa-list-alt"></i>
-              JS Project
-            </div>
-            <img src="Images/todo2.png" class="card-img-top" alt="..." />
-            <div class="card-body">
-              <h5 class="card-title">Task manager</h5>
-              <p class="card-text">
-                A JS Application that keeps track of the todo tasks using local
-                storage and provides a facility to mark as done/undone,add or
-                delete a task.
-              </p>
-              <a href="https://my-task-app.netlify.app/" class="btnn one"
-                >PLAY
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-12 col-md-6">
-          <div class="card m-3 mx-5">
-            <div class="card-header">
-              <!-- <i class="fa fa-angellist"></i>  -->
-              <i class="fa fa-list-alt"></i>
-              JS Project
-            </div>
-            <img src="Images/quiz.jpg" class="card-img-top" alt="..." />
-            <div class="card-body">
-              <h5 class="card-title">Quiz App</h5>
-              <p class="card-text">
-                JS Application that generates 10 random questions about a given
-                difficulty and topic via API calls and generates the score of
-                correct answers.
-              </p>
-              <a
-                href="https://khushibhambri.github.io/basic-webdev/Quiz%20App/quiz.html"
-                class="btnn one"
-                >PLAY
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-12 col-md-6">
-          <div class="card m-3 mx-5">
-            <div class="card-header">
-              <!-- <i class="fa fa-angellist"></i>  -->
-              <i class="fas fa-hand-scissors"></i>
-              JS Project
-            </div>
-            <img src="Images/git.png" class="card-img-top" alt="..." />
-            <div class="card-body">
-              <h5 class="card-title">Github Profile Viewer</h5>
-              <p class="card-text">
-                A JS Application that uses api calls to fetch data about the
-                github profiles and displays them in the application in style.
-                You only need to enter the username of the user you wanna know.
-              </p>
-              <a
-                href="https://khushibhambri.github.io/basic-webdev/GITHUB%20PROFILES/index.html"
-                class="btnn one"
-                >PLAY
-              </a>
-            </div>
-          </div>
-        </div>
-
       </div>
     </div>
 
