--- a/index.html
+++ b/index.html
@@ -128,6 +128,107 @@
       </div>
     </section>
 
+    <!-- --------------------------------------------------PROJECTS  section ------------------------------------------------------------>
+    <div id="projects" class="container-fluid pb-5 screen">
+      <div class="post-heading text-center">
+        <h4 class="title">PROJECTS</h4>
+        <hr class="w-50 mx-auto line" />
+      </div>
+      <div class="row">
+        <div class="col-12 col-md-6 col-lg-4">
+          <div class="card-p m-3 mx-1">
+            <div class="card-header">
+              <!-- <i class="fa fa-angellist"></i>  -->
+              <i class="fas fa-hand-scissors"></i>
+              C++ projects
+              <a href="https://kb-projects.netlify.app/#cpp" class="view">
+                VIEW
+              </a>
+            </div>
+            <img src="Images/c++pro.jpg" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">OOP and DSA projects Using C++.</h5>
+              <p class="card-text">
+                Various projects in C++ using Object Oriented concepts and DSA.
+                Sudoku solver - A game that generates a random Sudoku grid
+                having features of time, score and diﬃculty level and has a
+                solver that generates the solution too. Flight Reservation
+                System - System that reserves the required seats on a given
+                scheduled ﬂight with required speciﬁcations such as window and
+                class preference and a Notation converter.
+              </p>
+              <a
+                href="https://kb-projects.netlify.app/#cpp"
+                class="btnn one p-4"
+              >
+                VIEW
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-12 col-md-6">
+          <div class="card-p m-3 mx-1">
+            <div class="card-header">
+              <i class="fa fa-paw"></i>
+              Web Dev Projects
+              <a href="https://kb-projects.netlify.app/#web"> VIEW </a>
+            </div>
+            <img src="Images/webdev.png" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">
+                Front-end Development Using JS and ReactJS
+              </h5>
+              <p class="card-text">
+                Various web Projects using APIs, JS,HTML,CSS and Bootstrap which
+                include a Quiz App that generates 10 random questions of given
+                difficulty and topic via API calls and generates the score, a
+                Piano Sound Borad for Kids, GitHub profile cards with recent
+                repositories of the user, Daily Tips, a Scientific Calculator
+                and many more.
+              </p>
+              <a
+                href="https://kb-projects.netlify.app/#web"
+                class="btnn one p-4"
+              >
+                VIEW
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-12 col-md-6">
+          <div class="card-p m-3 mx-1">
+            <div class="card-header">
+              <!-- <i class="fa fa-angellist"></i>  -->
+              <i class="fa fa-list-alt"></i>
+              Data Analysis Projects
+              <a href="https://kb-projects.netlify.app/#da">VIEW </a>
+            </div>
+            <img
+              src="Images/dataanalytics.png"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h5 class="card-title">Data Analysis Using Python</h5>
+
+              <p class="card-text">
+                Data Analytics projects built using python and its libraries
+                like matplotlib,pandas,numpy,seaborn,plotly and deployed via
+                streamlit. Projects include whatsApp Chat Analyser and Twitter
+                sentimental analysis. Natural language processing used for
+                sentimental analysis.
+              </p>
+              <a href="https://kb-projects.netlify.app/#da" class="btnn one"
+                >VIEW
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- --------------------------------------skills section  ---------------------------------------------------->
 
     <div id="skills" class="container-fluid pb-5 screen">
@@ -140,10 +241,10 @@
           <div class="card m-4">
             <div class="card-header">
               <i class="fa fa-code"></i>
-              Html,CSS,JS
+              Html,CSS,JS,ReactJS
             </div>
             <img
-              src="Images/mern.png"
+              src="Images/web.jpeg"
               class="card-img-top"
               alt="..."
               height="270px"
@@ -230,101 +331,6 @@
       <button class="btnn mx-auto mb-5">
         <a href="#">Click to Know More</a>
       </button>
-    </div>
-
-    <!-- --------------------------------------------------PROJECTS  section ------------------------------------------------------------>
-    <div id="projects" class="container-fluid pb-5 screen">
-      <div class="post-heading text-center">
-        <h4 class="title">PROJECTS</h4>
-        <hr class="w-50 mx-auto line" />
-      </div>
-      <div class="row">
-        <div class="col-lg-4 col-12 col-md-6">
-          <div class="card m-3 mx-5">
-            <div class="card-header">
-              <!-- <i class="fa fa-angellist"></i>  -->
-              <i class="fas fa-hand-scissors"></i>
-              C++ projects
-            </div>
-            <img src="Images/c++pro.jpg" class="card-img-top" alt="..." />
-            <div class="card-body">
-              <h5 class="card-title">OOP and DSA projects Using C++.</h5>
-              <p class="card-text">
-                Various projects in C++ using Object Oriented concepts and DSA.
-                Sudoku solver - A game that generates a random Sudoku grid
-                having features of time, score and diﬃculty level and has a
-                solver that generates the solution too. Flight Reservation
-                System - System that reserves the required seats on a given
-                scheduled ﬂight with required speciﬁcations such as window and
-                class preference and a Notation converter.
-              </p>
-              <a
-                href="https://kb-projects.netlify.app/#cpp"
-                class="btnn one p-4"
-              >
-                VIEW
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-12 col-md-6">
-          <div class="card m-3 mx-5">
-            <div class="card-header">
-              <i class="fa fa-paw"></i>
-              Web Dev Projects
-            </div>
-            <img src="Images/webdev.png" class="card-img-top" alt="..." />
-            <div class="card-body">
-              <h5 class="card-title">
-                Front-end Development Using JS and ReactJS
-              </h5>
-              <p class="card-text">
-                Various web Projects using APIs, JS,HTML,CSS and Bootstrap which
-                include a Quiz App that generates 10 random questions of given
-                difficulty and topic via API calls and generates the score, a
-                Piano Sound Borad for Kids, GitHub profile cards with recent
-                repositories of the user, Daily Tips, a Scientific Calculator
-                and many more.
-              </p>
-              <a
-                href="https://kb-projects.netlify.app/#web"
-                class="btnn one p-4"
-              >
-                VIEW
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-12 col-md-6">
-          <div class="card m-3 mx-5">
-            <div class="card-header">
-              <!-- <i class="fa fa-angellist"></i>  -->
-              <i class="fa fa-list-alt"></i>
-              Data Analysis Projects
-            </div>
-            <img
-              src="Images/dataanalytics.png"
-              class="card-img-top"
-              alt="..."
-            />
-            <div class="card-body">
-              <h5 class="card-title">Data Analysis Using Python</h5>
-              <p class="card-text">
-                Data Analytics projects built using python and its libraries
-                like matplotlib,pandas,numpy,seaborn,plotly and deployed via
-                streamlit. Projects include whatsApp Chat Analyser and Twitter
-                sentimental analysis. Natural language processing used for
-                sentimental analysis.
-              </p>
-              <a href="https://kb-projects.netlify.app/#da" class="btnn one"
-                >VIEW
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
     </div>
 
     <!-- ----------------------------------------contact section  --------------------------------------------------->
@@ -498,8 +504,9 @@
   </body>
 </html>
 
-<!--copyright------------------ <i class="fa fa-copyright"></i>  -->
+<!-- copyright------------------ <i class="fa fa-copyright"></i>  -->
+-->
 <!--copyright------------------ <i class="fa fa-tasks"></i>  -->
 <!-- css--------------------------<i class="fa fa-css3"></i>  -->
 <!--  list of lines---------------<i class="fa fa-align-justify"></i>  -->
-<!--------------------------------<i class="fa fa-paperclip"></i> -->
+<!-- --------------------------------<i class="fa fa-paperclip"></i> -->
